--- a/monsters/hordes/index.html
+++ b/monsters/hordes/index.html
@@ -113,7 +113,7 @@
           <div class="col-md-8 col-md-offset-1">
              
 <h1>Ravenous Hordes</h1>
-<h3 class="MonsterName">Formian Drone	<span class="Tags">Horde, Organized, Cautious</span></h3>
+<h3 class="MonsterName">弗米蟻工兵 (Formian Drone)	<span class="Tags">Horde, Organized, Cautious</span></h3>
 <p class="MonsterStats">Bite (d6 damage), 7 HP, 4 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Hive connection, Insectoid</p>
@@ -121,14 +121,14 @@
 <ul><li>Raise the alarm</li>
 <li>Create value for the hive</li>
 <li>Assimilate</li></ul>
-<h3 class="MonsterName">Formian Taskmaster	<span class="Tags">Group, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">弗米蟻監工 (Formian Taskmaster)	<span class="Tags">Group, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Spiked whip (d8 damage), 6 HP, 3 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Hive connection, Insectoid</p>
 <p class="MonsterDescription">It takes two hands to rule an empire: one to wield the scepter and one to crack the whip. These ant-folk are that whip. Lucky for them, with two extra arms, that’s a lot of whip to crack. They oversee the vast swarms of worker drones that set to build the mighty caverns and ziggurats that dot the places that formians can be found. One in a hundred, these brutes stand two or three feet taller than their pale, near-mindless kin and have a sharper, crueler wit to match. They’ll often ignore the soft races (as we’re known) if we don’t interfere in a project, but get in the way of The Great Work and expect nothing less than their full attention. You don’t want their full attention. <em>Instinct</em>: To command</p>
 <ul><li>Order drones into battle</li>
 <li>Set great numbers in motion</li></ul>
-<h3 class="MonsterName">Formian Centurion	<span class="Tags">Horde, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">弗米蟻百夫長 (Formian Centurion)	<span class="Tags">Horde, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Barbed spear (b[2d6]+2 damage), 7 HP, 3 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Hive connection, Insectoid, Wings</p>
@@ -136,7 +136,7 @@
 <ul><li>Advance as one</li>
 <li>Summon reinforcements</li>
 <li>Give a life for the hive</li></ul>
-<h3 class="MonsterName">Formian Queen	<span class="Tags">Solitary, Huge, Organized, Intelligent, Hoarder</span></h3>
+<h3 class="MonsterName">弗米蟻女王 (Formian Queen)	<span class="Tags">Solitary, Huge, Organized, Intelligent, Hoarder</span></h3>
 <p class="MonsterStats">Crushing mandibles (d10+5 damage), 24 HP, 3 Armor</p>
 <p class="MonsterStats"><span class="Tags">Reach, Forceful</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Hive connection, Insectoid</p>
@@ -144,47 +144,47 @@
 <ul><li>Call every formian it spawned</li>
 <li>Release a half-formed larval mutation</li>
 <li>Organize and issue orders</li></ul>
-<h3 class="MonsterName">Gnoll Tracker	<span class="Tags">Group, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">豺狼人追跡者 (Gnoll Tracker)	<span class="Tags">Group, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Bow (d8 damage), 6 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Scent-tracker</p>
 <p class="MonsterDescription">Once they scent your blood, you can’t escape. Not without intervention from the gods, or the duke’s rangers at least. The desert scrub is a dangerous place to go exploring on your own and if you fall and break your leg or eat the wrong cactus, well, you’ll be lucky if you die of thirst before the gnolls find you. They prefer their prey alive, see—cracking bones and the screams of the dying lend a sort of succulence to a meal. Sickening creatures, no? They’ll hunt you, slow and steady, as you die. If you hear laughter in the desert wind, well, best pray Death comes to take you before they do. <em>Instinct</em>: To prey on weakness</p>
 <ul><li>Doggedly track prey</li>
 <li>Strike at a moment of weakness</li></ul>
-<h3 class="MonsterName">Gnoll Emissary	<span class="Tags">Solitary, Divine, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">豺狼人特使 (Gnoll Emissary)	<span class="Tags">Solitary, Divine, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Ceremonial dagger (d10+2 damage), 18 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Scent</p>
 <p class="MonsterDescription">Oh, an emissary! How nice. I suspect you didn’t know the gnolls had ambassadors, did you? Yes, even these mangy hyenas have to make nice sometimes. No, no, not with us. Nor the dwarves, neither. No, the emissary is the one, among his packmates, who trucks directly with their dripping demon lord. Frightening? Too right. Every hound has a master with his hand on the chain. This gnoll hears his master’s voice. Hears it and obeys. <em>Instinct</em>: To share divine insight</p>
 <ul><li>Pass on demonic influence</li>
 <li>Drive the pack into a fervor</li></ul>
-<h3 class="MonsterName">Gnoll Alpha	<span class="Tags">Solitary, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">豺狼人菁英 (Gnoll Alpha)	<span class="Tags">Solitary, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Sword (b[2d10] damage, 1 piercing), 12 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Scent</p>
 <p class="MonsterDescription">Every pack has its top dog. Bigger, maybe—that’d be the simplest way. Often, though, with these lank and filthy mutts, it’s not about size or sharp teeth but about cruelty. About a willingness to kill your brothers and eat them while the pack watches. Willingness to desecrate the pack in a way that cows them to you. If they’re that awful to each other—to their living kin—think about how they must view us. It’s hard to be mere meat in a land of carnivores. <em>Instinct</em>: To drive the pack</p>
 <ul><li>Demand obedience</li>
 <li>Send the pack to hunt</li></ul>
-<h3 class="MonsterName">Orc Bloodwarrior	<span class="Tags">Horde, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">獸人鮮血勇士 (Orc Bloodwarrior)	<span class="Tags">Horde, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Jagged blade (d6+2 damage, 1 piercing), 3 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Messy</span></p>
 <p class="MonsterDescription">The orcish horde is a savage, bloodthirsty, and hateful collection of tribes. There are myths and stories that tell of the origin of their rage—a demon curse, a homeland destroyed, elven magic gone wrong—but the truth has been lost to time. Every able orc, be it man or woman, child or elder, swears fealty to the warchief and their tribe and bears the jagged blade of a bloodwarrior. Men are trained to fight and kill—orcs are born to it. <em>Instinct</em>: To fight</p>
 <ul><li>Fight with abandon</li>
 <li>Revel in destruction</li></ul>
-<h3 class="MonsterName">Orc Berserker	<span class="Tags">Solitary, Large, Divine, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">獸人狂戰士 (Orc Berserker)	<span class="Tags">Solitary, Large, Divine, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Cleaver (d10+5 damage), 20 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Mutations</p>
 <p class="MonsterDescription">Stained in the unholy ritual of Anointing By The Night’s Blood, some warriors of the horde rise to a kind of twisted knighthood. They trade their sanity for this honor, stepping halfway into a world of swirling madness. This makes berserkers the greatest of their tribe, though as time passes, the chaos spreads. The rare berserker that lives more than a few years becomes horrible and twisted, growing horns or an extra arm with which to grasp the iron cleavers they favor in battle. <em>Instinct</em>: To rage</p>
 <ul><li>Fly into a frenzy</li>
 <li>Unleash chaos</li></ul>
-<h3 class="MonsterName">Orc Breaker	<span class="Tags">Solitary, Large</span></h3>
+<h3 class="MonsterName">獸人破壞者 (Orc Breaker)	<span class="Tags">Solitary, Large</span></h3>
 <p class="MonsterStats">Hammer (d10+3 damage ignores armor), 16 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Forceful</span></p>
 <p class="MonsterDescription">“Before you set out across the hordeland, brave sir, hark a moment to the tale of Sir Regnus. Regnus was like you, sir—a paladin of the Order, all a-shine in his plated armor and with a shield as tall as a man. Proud he was of it, too—Mirrorshield, he called himself. Tale goes that he’d set his eyes on rescuing some lost priest, a kidnap from the abbey on the borders. Regnus came across some orcs in his travels, a dozen or so, and thought, as one might, that they’d be no match. Battle was joined and all was well until one of them orcs emerged from the fray with a hammer bigger than any man ought to be able to wield. Built more like an ogre or a troll, they say it was, and with a single swing, it crushed Regnus to the ground, shield and all. It were no ordinary orc, they say. It were a breaker. They can’t make plate of their own, see, so maybe it’s jealousy drives these burly things to crush and shatter the way they do. Effective tactic, though. Careful out there.” <em>Instinct</em>: To smash</p>
 <ul><li>Destroy armor or protection</li>
 <li>Lay low the mighty</li></ul>
-<h3 class="MonsterName">Orc One-Eye	<span class="Tags">Group, Divine, Magical, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">獸人獨眼者 (Orc One-Eye)	<span class="Tags">Group, Divine, Magical, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Inflict Wounds (d8+2 damage ignores armor), 6 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> One eye</p>
@@ -192,7 +192,7 @@
 <ul><li>Rend flesh with divine magic</li>
 <li>Take an eye</li>
 <li>Make a sacrifice and grow in power</li></ul>
-<h3 class="MonsterName">Orc Shaman	<span class="Tags">Solitary, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">獸人薩滿 (Orc Shaman)	<span class="Tags">Solitary, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Elemental blast (d10 damage ignores armor), 12 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Elemental power</p>
@@ -201,14 +201,14 @@
 <li>Give power of fire</li>
 <li>Give swiftness of water</li>
 <li>Give clarity of air</li></ul>
-<h3 class="MonsterName">Orc Slaver	<span class="Tags">Horde, Stealthy, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">獸人奴隸商人 (Orc Slaver)	<span class="Tags">Horde, Stealthy, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Whip (d6 damage), 3 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterDescription">Red sails fly in the southern sea. Red sails and ships of bone, old wood and iron. The warfleet of the horde. Orcs down that way have taken to the sea, harassing island towns and stealing away with fishermen and their kin. It’s said the custom is spreading north and the orcs learn the value of free work. Taken to it like a sacred duty—especially if they can get their hands on elves. Hard to think of a grimmer fate than to live out your life on an orcish galley, back bent under the lash. <em>Instinct</em>: To take</p>
 <ul><li>Take a captive</li>
 <li>Pin someone under a net</li>
 <li>Drug them</li></ul>
-<h3 class="MonsterName">Orc Shadowhunter	<span class="Tags">Solitary, Stealthy, Magical, Intelligent</span></h3>
+<h3 class="MonsterName">獸人陰影獵手 (Orc Shadowhunter)	<span class="Tags">Solitary, Stealthy, Magical, Intelligent</span></h3>
 <p class="MonsterStats">Poisoned dagger (d10 damage, 1 piercing), 10 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Shadow cloak</p>
@@ -216,7 +216,7 @@
 <ul><li>Poison them</li>
 <li>Melt into the shadows</li>
 <li>Cloak them in darkness</li></ul>
-<h3 class="MonsterName">Orc Warchief	<span class="Tags">Solitary, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">獸人戰酋 (Orc Warchief)	<span class="Tags">Solitary, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Iron Sword of Ages (b[2d10]+2 damage), 16 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> One-Eye blessings, Shaman blessings, Divine protection from mortal harm</p>
@@ -224,14 +224,14 @@
 <ul><li>Start a war</li>
 <li>Make a show of power</li>
 <li>Enrage the tribes</li></ul>
-<h3 class="MonsterName">Triton Spy	<span class="Tags">Solitary, Stealthy, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">梭螺魚人間諜 (Triton Spy)	<span class="Tags">Solitary, Stealthy, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Trident (w[2d10] damage), 12 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Near</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Aquatic</p>
 <p class="MonsterDescription">A fishing village caught one in their net, some time ago. Part a man and part some scaly sea creature, it spoke in a broken, spy-learned form of the common tongue before it suffocated in the open air. It told the fishermen of a coming tide, an inescapable swell of the power of some deep-sea god and that the triton empire would rise up and drag the land down into the ocean. The tale spread and now, when fishermen sail the choppy seas, they watch and worry that the dying triton’s tales were true. That there are powers deep below that watch and wait. They fear the tide is coming in. <em>Instinct</em>: To spy on the surface world</p>
 <ul><li>Reveal their secrets</li>
 <li>Strike at weakness</li></ul>
-<h3 class="MonsterName">Triton Tidecaller	<span class="Tags">Group, Divine, Magical, Intelligent</span></h3>
+<h3 class="MonsterName">梭螺魚人喚潮者 (Triton Tidecaller)	<span class="Tags">Group, Divine, Magical, Intelligent</span></h3>
 <p class="MonsterStats">Waves (d8+2 damage, ignores armor), 6 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Aquatic, Mutations</p>
@@ -239,14 +239,14 @@
 <ul><li>Cast a spell of water and destruction</li>
 <li>Command beasts of the sea</li>
 <li>Reveal divine proclamation</li></ul>
-<h3 class="MonsterName">Triton Sub-Mariner	<span class="Tags">Group, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">梭螺魚人潛海者 (Triton Sub-Mariner)	<span class="Tags">Group, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Harpoon (b[2d8] damage), 6 HP, 3 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Aquatic</p>
 <p class="MonsterDescription">The triton are not a militant race by nature. They shy away from battle except when the sahuagin attack, and then they only defend themselves and retreat into the depths where their foes can’t follow. This trend begins to change. As the tidecallers come to rally their people, some triton men and women take up arms. They call these generals “sub-mariners” and build for them armor of shells and hardened glass. They swim in formation, wielding pikes and harpoons and attack the crews of ships that wander too far from port. Watch for their pennants of kelp on the horizon and the conch-cry of a call to battle and keep, if you can, your boats near shore. <em>Instinct</em>: To wage war</p>
 <ul><li>Lead tritons to battle</li>
 <li>Pull them beneath the waves</li></ul>
-<h3 class="MonsterName">Triton Noble	<span class="Tags">Group, Organized, Intelligent</span></h3>
+<h3 class="MonsterName">梭螺魚人貴族 (Triton Noble)	<span class="Tags">Group, Organized, Intelligent</span></h3>
 <p class="MonsterStats">Trident (d8 damage), 6 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Near, Far</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Aquatic</p>
