--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -297,35 +297,47 @@
 <li class="NumberedList">囤積的寶藏堆：1d10×1000 枚金幣 和 1d10×10 顆珠寶，每顆珠寶價值 2d6×100 金幣</li></ol>
 <hr/>
 
-<h2>Monster Settings</h2>
-<p class="NoIndent">The monsters in this book are presented in <em>monster settings</em>. A monster setting is a type of location and the monsters you might find there. It’s a way of grouping monsters by where they fit in the world. A monster setting tells you what kind of monsters might inhabit an area while your fronts tell you what monsters are working together or have ongoing plots.</p>
-<p>When creating your own monster settings, they can be more specific. You could create a monster setting for the Great Western Steppes or the Domains of the Horse Lords.</p>
-<p>Consult a monster setting to populate a front or when you want a threat that is only tangentially related to one of your fronts. For example, if the heroes are battling against the dungeon front, the cult of Khul-ka-ra, by exploring the ancient ruins that the cult has made its home then you might use monsters from the Legions of the Undead as a related threat—not truly part of the front but still a block in the heroes’ path.</p>
-<p>The monster stat blocks within the settings describe HP, damage, and all the other aspects of the monster. These monsters were created with the same process listed above, and the reasons for their stats are just as important as the stats themselves. Looking at the reasoning behind the stats will allow you to present the monsters honestly, answering questions that arise in Dungeon World like “can a warband of gnolls sack an entire village?”</p>
+<h2>怪物環境設定 (Monster Settings)</h2>
+<p class="NoIndent">
+	本書中介紹的怪物們會以<b>怪物環境設定</b>的形式呈現。怪物環境設定同時包括了某個特定類型的場所，以及你可能會在該處遭遇到的怪物們。這同時也是一種根據怪物們在這個世界所處的場所來進行分類的方式。怪物環境設定將告訴你這個區域可能棲息著什麼樣的怪物，而你的前置則會告訴你哪些怪物正在共同合作、或籌備著某個正在進行的陰謀。</p>
+<p>
+	當創建屬於你自己的怪物環境設定時，其內容又可以更具體一些。比如說，你可以為「西部大草原」或「駿馬之王的領地」創建出專屬於該地區的怪物環境設定。</p>
+<p>
+	當你需要填充你前置的內容，或是當你想要在故事中安排一個與前置沒什麼太大關聯的威脅時，你都可以查閱怪物環境設定來幫助發想。舉例來說，若英雄們正在奮力對抗著地城前置中描繪的危害：一群屬於克魯．喀．拉教團的邪教徒，那麼你可能會想在這座被邪教徒佔據為家的古老遺跡中安排一些來自「不死軍團」環境設定中的怪物做為關聯的威脅──儘管牠們其實不屬於前置，但牠們仍是英雄路上的阻礙。</p>
+<p>
+	怪物的數據資料中記載了牠們的生命值(HP)、傷害、以及所有其他關於該怪物的形象。這些怪物同樣都是透過上述創建過程而被創造出來的，而牠們數值屬性之所以如此的理由就跟數值本身一樣重要。仔細閱讀數據背後的理由將會讓你更能忠實的呈現這頭怪物的樣貌，幫助你回答在地城世界中浮現的各種問題，像是「一群豺狼人戰團有能力洗劫整個村莊嗎？」</p>
 
 <h3>洞穴居族 (Cavern Dwellers)</h3>
-<p class="NoIndent">At the edges of civilization in the caves and tunnels below the old mountains of the world dwell all sorts of scheming, dangerous monsters. Some are wily and old, like the race of goblins scheming to burn villages and make off with livestock. Others are strange aberrations of nature like the stinking, trash-eating Otyugh. A word of caution, then, to those brave adventurers whose first foray into danger leads them into these dank and shadowy places; bad things live in the dark. Bad things with sharp teeth.</p>
+<p class="NoIndent">
+	在文明世界的邊陲，在久遠山脈底下的洞穴和坑道之中，居住著各式各樣詭計多端的危險怪物。牠們有些狡詐而古老，像那些謀劃著燒毀村莊、掠奪牲畜的哥布林種族。而有些則是自然界的畸形怪異，比如說那散發惡臭、吞吃穢物的食腐獸。因此，對那些首次冒險就走進陰冷潮濕之地的勇敢冒險者們，我要提醒你們：黑暗中住著壞東西……一群長滿飢渴利齒的壞東西。</p>
 
 <h3>沼澤棲物 (Denizens of the Swamp)</h3>
-<p class="NoIndent">All things give way to rot in the end. Food spoils on the table, men’s minds go mad with age and disease. Even the world itself, when left untended and uncared for, can turn to black muck and stinking air. Things dwell in these parts of Dungeon World. Things gone just as a bad as the swirling filth that fills the swamps. In these cesspit lowlands, adventurers will find such creatures as the deadly-eyed basilisk or the famed, unkillable troll. You’ll need more than a dry pair of boots to survive these putrid fens. A sword would be a good start.</p>
+<p class="NoIndent">
+	所有一切終將腐爛。桌上的食物會酸臭、人的心智會隨著年歲和疾病逐漸邁向瘋狂。就連世界本身也是，若無人看管，無人照顧，終將腐化成漆黑淤泥和惡臭的空氣。然而，在地城世界的這些角落中仍然棲息著生命：這些存在就跟那充斥在沼澤中的臭爛漩渦一樣糟糕透頂。在這些汙水低地，冒險者將會遭遇到牠們：比如那眨著致命魔眼的巴西利斯克、或那惡名昭彰、無法被殺死的醜陋巨魔。要在這腐爛的沼澤中生存，你會需要遠遠比一雙好靴子更多的裝備……或許一把削鐵如泥的長劍會是個不錯的開始。</p>
 
 <h3>不死軍團 (Legions of the Undead)</h3>
-<p class="NoIndent">The sermons of mannish and dwarven gods would tell you that Death is the end of all. They say that once the mortal coil is unwound and a person takes their final breath that all is warmth and song and the white wings of angels. Not so. Not for all. For some, after life’s embrace loses its strength a darker power can take hold. Black magic rips the dead from the ground and gives them shambling unlife full of hate and hunger. Sorcery and witchcraft lend an ancient spell-smith the power to live forever in the husk of a Lich. There are bleak enchantments at play in shadowy corners all throughout Dungeon World. These creatures are the spawn of that fell magic.</p>
+<p class="NoIndent">
+	人類和矮人諸神的佈道會告訴你，死亡是一切的終點。他們說，一旦你告別凡俗塵世的種種，嚥下了最後一口氣，迎接你的將會是溫暖、樂歌、以及天使的白翼。然而，事實並非如此，至少不是對所有人。對某些不幸的人來說，當生命的抱擁失去了它最後的力量，一股黑暗的力量將取而代之，佔據這具軀體。黑魔法能夠把死者從地底拉扯出來，將那步履蹣跚，充滿著仇恨和飢渴的不死之身賜予他們。更有甚者，透過奧法和巫術尋得了遠古咒術──將永生不死的力量鍛進了巫妖那腐朽的軀殼之中。這些荒蕪黑暗的魔法散布在地城世界的各個角落，而這些不死生物正是那墮落魔法帶來的扭曲產物。</p>
 
 <h3>幽暗森林 (The Dark Woods)</h3>
-<p class="NoIndent">It would not be a lie to say that there are trees that stand in the deepest groves of Dungeon World that have stood since before man or elf walked amidst their roots. It would be true, too, to say that these ancient trees have long lost the green leaves of spring. In the strands of the dark woods one finds, if one looks in the right place, sylvan monsters old and powerful. Here live the race of savage centaurs and the fey soul-stealing creatures of yore. Under the shadow of the ancient trees, wolf-men howl for blood. Hurry along the old forest road and light no fire for food or warmth for it’s said that flames offend the woods themselves. You wouldn’t want that, would you?</p>
+<p class="NoIndent">
+	若說地城世界那深遂森林中的神木自人類與精靈踏入它們的足根前便靜靜佇立，可絕不是誇大其辭。若說這些久遠古樹早已失去了春天綠葉，那也是事實。在幽暗森林的深處，只要找對地方，你就能發現那群古老而強大的森林精怪。在這裡棲居著野蠻無道的半人馬、以及那些自往昔便不斷竊取靈魂的狡猾妖精。在古樹的陰影之下，狼人長嚎，渴求鮮血。謹記，當踏上這古老荒蠻的森林小徑時，加快腳步，不要為了一時的溫飽而燃起火堆。他們說火焰會冒犯森林本身……你不會希望發生這種事，是吧？</p>
 
 <h3>貪掠團夥 (Ravenous Hordes)</h3>
-<p class="NoIndent">“I’ve bested an orc in single combat,” they crow. “I’ve fought a gnoll and lived to the tell the tale.” Which is no small feat and yet, you know the truth of these boasts. Like vermin, spotting but one of these creatures speaks to a greater doom on the horizon. No orc travels alone. No slavering gnoll moves without his pack. You know that soon, the wardrums will sound and the walls will be besieged by the full fury of the warchief and his tusked berserkers. These are the monsters that will bring civilization, screaming and weeping, to its knees. Unless you can stop them. Best of luck.</p>
+<p class="NoIndent">
+	「俺曾在一場單挑決鬥中擊敗一頭獸人！」他們得意洋洋的說道：「我曾對一頭豺狼人發起死鬥，然後活到了最後！」這確實是件不小的壯舉，但，你知道這些吹噓背後的真相。就像害蟲一樣，當你發現到一頭這些生物，就意味著地平線的另一端有著更龐大的災厄準備降臨。沒有獸人會獨自旅行，也沒有任何貪婪垂涎的豺狼人會脫離牠的部族行動。你知道，很快，戰鼓將會響起，城牆將被戰酋與牠手下那群獠牙狂戰士的憤怒給包圍環繞。這些怪物將讓文明社會在尖叫與哭喊中跪倒在牠們面前。除非你能阻止牠們……祝好運。</p>
 
 <h3>扭曲實驗體 (Twisted Experiments)</h3>
-<p class="NoIndent">For some who learn the arcane arts it’s not merely enough to be able to live for a thousand years or throw lightning bolts that can fry a man. Some aren’t quite satisfied with the power to speak to the dead or draw the angels down from heaven. Hubris calls on those cloaked-and-hooded “scientists” to make a strange and unholy life of their own. No mortal children, these. These are the brood of a mind gone foul with strange magic. In this setting you will find such nightmares as the chimera, dripping poison. Here, too, are the protector golems and mutant apes. All sorts of bad ideas await you in the fallen towers of the mad magicians of Dungeon World.</p>
+<p class="NoIndent">
+	對某些精熟奧法技藝的人們而言，僅僅只是能活上數千年、或扔出能將受害著電成焦炭的閃電束可遠遠不夠。有些人就是不滿足於與死者交談、或是將天使從天堂跩下的力量。傲慢呼喚著這些身披斗篷、頭戴兜帽的「科學家」，誘使他們墮入怪異不潔的人生。絕非俗世之子，這些產物，牠們是被怪奇魔法玷污的心靈所孕育而出的怪物。在這裡，你將發現像奇美拉一樣，滴著劇毒，張牙舞爪的可怖夢魘。在這裡，你也能找到堅毅的守衛魔像、以及瘋狂的變種巨猿。在地城世界，這座由瘋狂魔法師所建造的墮落高塔中，各種糟糕主意的成果正等待著你去一探究竟。</p>
 
 <h3>下界深淵 (The Lower Depths)</h3>
-<p class="NoIndent">Ruins dot the countryside of Dungeon World. Old bastions of long-forgotten civilization fallen to decay, to monsters, or to the whim of a vengeful god. These ruins often cover a much more dangerous truth—catacombs and underground complexes lousy with traps and monsters. Gold, too. Which is why you’re here. Why you’re locked in mortal combat with a tribe of spiteful dark elves. Battling stone giants in caverns the size of whole countries. Maybe, though, you’re the noble souls who’ve travelled to the world’s heart to put an end to the Apocalypse Dragon—the beast who, it is said, will one day swallow the sun and kill us all. We appreciate it, really. We’ll all pray for you.</p>
+<p class="NoIndent">
+	廢墟遺跡散布在地城世界的鄉下邊疆。被遺忘已久的古老文明堡壘早已衰敗腐朽、被怪物盤據、或因復仇之神的一時興起而毀滅。在這些遺跡底下往往掩蓋著更加危險的真相──在古老陵墓和錯綜複雜的地下建築群充斥著各種陷阱和怪物。當然，還有黃金，這是你們之所以來到這裡的理由。也是為什麼你們要和邪惡的黑暗精靈展開殊死搏鬥、並在宛如國家規模的巨大洞窟中與石巨人交鋒的理由。或許，你們也會是抵達世界之心的高貴靈魂，把傳說中將吞噬太陽並殺滅一切生靈的啟示錄巨龍給徹底終結。我們會感激你們的善舉，真的，我們全都會為你們祈禱。</p>
 
 <h3>位面勢力 (Planar Powers)</h3>
-<p class="NoIndent">Sometimes, monsters do not come from Dungeon World at all. Beyond the mountains at the edge of the world or below the deepest seas, the sages and wise old priests say that there are gateways to the lands beyond. They speak of elysian fields; rivers of sweet wine and maidens dancing in fields of gold. They tell tales of the paradise of heavens to be found past the Planar Door. Tales tell, too, of the Thousandfold Hell. Of the swirling Elemental Vortex and the devils that wait for the stars to align so they can enter Dungeon World and wreak their bloody havoc. You must be curious to know if these tales are true? What will you see when the passage to the beyond is opened?</p>
+<p class="NoIndent">
+	有時候，怪物根本就不是來自地城世界。在高聳入雲的山峰之巔、或在深沉暗闇的海溝之底，智者們和睿智的老祭司說，通往遙遠異界的門扉就沉睡在那裏。他們提到極樂天堂之境；河流中流躺著甜酒、而少女則在黃金田野間舞蹈。他們講述著神話傳說，描繪著那在異界之門之後的天堂國度。然而，傳說故事也同樣提到了地獄的千層深淵。無情的元素渦流和妖魔鬼怪等待著在群星正位之時入侵地城世界，發洩造成牠們那血腥的破壞。你一定很好奇這些傳說是不是真的？而當連接彼界的通道被開啟時，你又將看到什麼呢？</p>
 
 
 
