--- a/monsters/swamp/index.html
+++ b/monsters/swamp/index.html
@@ -113,7 +113,7 @@
           <div class="col-md-8 col-md-offset-1">
              
 <h1>Swamp Denizens</h1>
-<h3 class="MonsterName">Bakunawa	<span class="Tags">Solitary, Large, Intelligent, Messy, Forceful</span></h3>
+<h3 class="MonsterName">巴庫納瓦 (Bakunawa)	<span class="Tags">Solitary, Large, Intelligent, Messy, Forceful</span></h3>
 <p class="MonsterStats">Bite (d10+3 damage, 1 piercing), 16 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Amphibious</p>
@@ -121,20 +121,20 @@
 <ul><li>Lure prey with lies and illusions</li>
 <li>Lash out at light</li>
 <li>Devour</li></ul>
-<h3 class="MonsterName">Basilisk	<span class="Tags">Solitary, Hoarder</span></h3>
+<h3 class="MonsterName">巴西利斯克 (Basilisk)	<span class="Tags">Solitary, Hoarder</span></h3>
 <p class="MonsterStats">Bite (d10 damage), 12 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterDescription">“Few have seen a basilisk and lived to tell the tale. Get it? Seen a basilisk? Little bit of basilisk humor there. Sorry, I know you’re looking for something helpful, sirs. Serious stuff, I understand. The basilisk, even without its ability to turn your flesh to stone with a gaze, is a dangerous creature. A bit like a frog, bulbous eyes and six muscled legs built for leaping. A bit like an alligator, with snapping jaws and sawing teeth. Covered in stony scales and very hard to kill. Best avoided, if possible.” <em>Instinct</em>: To create new statuary</p>
 <ul><li>Turn flesh to stone with a gaze</li>
 <li>Retreat into a maze of stone</li></ul>
-<h3 class="MonsterName">Black Pudding	<span class="Tags">Solitary, Amorphous</span></h3>
+<h3 class="MonsterName">黑布丁 (Black Pudding)	<span class="Tags">Solitary, Amorphous</span></h3>
 <p class="MonsterStats">Corrosive touch (d10 damage, ignores armor), 15 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Amorphous</p>
 <p class="MonsterDescription">How do you kill a pile of goo? A great, squishy pile of goo that also happens to want to dissolve you and slurp you up? That is a good question to which I have no answer. Do let us know when you find out. <em>Instinct</em>: To dissolve</p>
 <ul><li>Eat away metal, flesh, or wood</li>
 <li>Ooze into a troubling place: food, armor, stomach</li></ul>
-<h3 class="MonsterName">Coutal	<span class="Tags">Solitary, Intelligent Devious</span></h3>
+<h3 class="MonsterName">羽蛇 (Couatl)	<span class="Tags">Solitary, Intelligent Devious</span></h3>
 <p class="MonsterStats">Light ray (d8 damage, ignores armor), 12 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Wings, Halo</p>
@@ -142,7 +142,7 @@
 <ul><li>Pass judgment on a person or place</li>
 <li>Summon divine forces to cleanse</li>
 <li>Offer information in exchange for service</li></ul>
-<h3 class="MonsterName">Crocodilian	<span class="Tags">Group, Large</span></h3>
+<h3 class="MonsterName">巨鱷 (Crocodilian)	<span class="Tags">Group, Large</span></h3>
 <p class="MonsterStats">Bite (d8+3 damage), 10 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Amphibious, Camouflage</p>
@@ -150,7 +150,7 @@
 <ul><li>Attack an unsuspecting victim</li>
 <li>Escape into the water</li>
 <li>Hold something tight in its jaws</li></ul>
-<h3 class="MonsterName">Doppelgänger	<span class="Tags">Solitary, Devious, Intelligent</span></h3>
+<h3 class="MonsterName">二重身 (Doppelgänger)	<span class="Tags">Solitary, Devious, Intelligent</span></h3>
 <p class="MonsterStats">Dagger (d6 damage), 12 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Shapeshifting</p>
@@ -158,7 +158,7 @@
 <ul><li>Assume the shape of a person whose flesh it’s tasted</li>
 <li>Use another’s identity to advantage</li>
 <li>Leave someone’s reputation shattered</li></ul>
-<h3 class="MonsterName">Dragon Turtle	<span class="Tags">Solitary, Huge, Cautious</span></h3>
+<h3 class="MonsterName">龍龜 (Dragon Turtle)	<span class="Tags">Solitary, Huge, Cautious</span></h3>
 <p class="MonsterStats">Bite (d10+3 damage), 20 HP, 4 Armor</p>
 <p class="MonsterStats"><span class="Tags">Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Shell, Amphibious</p>
@@ -166,7 +166,7 @@
 <ul><li>Move forward implacably</li>
 <li>Bring its full bulk to bear</li>
 <li>Destroy structures and buildings</li></ul>
-<h3 class="MonsterName">Dragon Whelp	<span class="Tags">Solitary, Small, Intelligent, Cautious, Hoarder</span></h3>
+<h3 class="MonsterName">幼龍 (Dragon Whelp)	<span class="Tags">Solitary, Small, Intelligent, Cautious, Hoarder</span></h3>
 <p class="MonsterStats">Elemental breath (d10+2 damage), 16 HP, 3 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Near</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Wings, Elemental Blood</p>
@@ -174,35 +174,35 @@
 <ul><li>Start a lair, form a base of power</li>
 <li>Call on family ties</li>
 <li>Demand oaths of servitude</li></ul>
-<h3 class="MonsterName">Ekek	<span class="Tags">Horde</span></h3>
+<h3 class="MonsterName">埃克克鳥妖 (Ekek)	<span class="Tags">Horde</span></h3>
 <p class="MonsterStats">Talons (d6 damage), 3 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Wing-arms</p>
 <p class="MonsterDescription">Ugly, wrinkled bird-folk, these. Once, maybe, in some ancient past, they were a race of angelic men from on high, but now they eat rats that they fish from the murk with talon-feet and devour with needle-teeth. They understand the tongues of men and dwarves but speak in little more than gibbering tongues, mimicking the words they hear with mocking laughter. It’s a chilling thing to see a beast so close to man or bird but not quite either one. <em>Instinct</em>: To lash out</p>
 <ul><li>Attack from the air</li>
 <li>Carry out the bidding of a more powerful creature</li></ul>
-<h3 class="MonsterName">Fire Eels	<span class="Tags">Horde, Tiny</span></h3>
+<h3 class="MonsterName">火鰻 (Fire Eels)	<span class="Tags">Horde, Tiny</span></h3>
 <p class="MonsterStats">Burning touch (d6-2 damage, ignores armor), 3 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Hand</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Flammable oil, aquatic</p>
 <p class="MonsterDescription">These strange creatures are no bigger or smarter than their mundane kin. They have the same vicious nature. Over their relations they have one advantage—an oily secretion that oozes from their skin. It makes them hard to catch. On top of that, with a twist of their body they can ignite the stuff, leaving pools of burning oil atop the surface of the water and roasting prey and predator alike. I hear the slimy things make good ingredients for fire-resistant gear, but you have to get your hands on one, first. <em>Instinct</em>: To ignite</p>
 <ul><li>Catch someone or something on fire (even underwater)</li>
 <li>Consume burning prey</li></ul>
-<h3 class="MonsterName">Frogman	<span class="Tags">Horde, Small, Intelligent</span></h3>
+<h3 class="MonsterName">蛙人 (Frogman)	<span class="Tags">Horde, Small, Intelligent</span></h3>
 <p class="MonsterStats">Spear (d6 damage), 7 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Amphibious</p>
 <p class="MonsterDescription">Croak croak croak. Little warty munchkins. Some wizard or godling’s idea of a bad joke, these creatures are. They stand as men, dress in scavenged cloth and hold court in their froggy villages. They speak a rumbling pidgin form of the tongue of man and are constantly at war with their neighbors. They’re greedy and stupid but clever enough when they need to defend themselves. Some say, too, their priests have a remarkable skill at healing. Or maybe they’re just really, really hard to kill. <em>Instinct</em>: To wage war</p>
 <ul><li>Launch an amphibious assault</li>
 <li>Heal at a prodigious rate</li></ul>
-<h3 class="MonsterName">Hydra	<span class="Tags">Solitary, Large</span></h3>
+<h3 class="MonsterName">海德拉 (Hydra)	<span class="Tags">Solitary, Large</span></h3>
 <p class="MonsterStats">Bite (d10+3 damage), 16 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Many heads, Only killed by a blow to the heart</p>
 <p class="MonsterDescription">A bit like a dragon, wingless though it may be. Heads, nine in number at birth, spring from a muscled trunk and weave a sinuous pattern in the air. A hydra is to be feared—a scaled terror of the marsh. The older ones, though, they have more heads, for every failed attempt to murder it just makes it stronger. Cut off a head and two more grow in its place. Only a strike, true and strong, to the heart can end a hydra’s life. Not time or tide or any other thing but this. <em>Instinct</em>: To grow</p>
 <ul><li>Attack many enemies at once</li>
 <li>Regenerate a body part (especially a head)</li></ul>
-<h3 class="MonsterName">Kobold	<span class="Tags">Horde, Small, Stealthy, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">狗頭人 (Kobold)	<span class="Tags">Horde, Small, Stealthy, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Spear (d6 damage), 3 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Dragon connection</p>
@@ -210,14 +210,14 @@
 <ul><li>Lay a trap</li>
 <li>Call on dragons or draconic allies</li>
 <li>Retreat and regroup</li></ul>
-<h3 class="MonsterName">Lizardman	<span class="Tags">Group, Stealthy, Intelligent, Organized</span></h3>
+<h3 class="MonsterName">蜥蜴人 (Lizardman)	<span class="Tags">Group, Stealthy, Intelligent, Organized</span></h3>
 <p class="MonsterStats">Spear (d8 damage), 6 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Amphibious</p>
 <p class="MonsterDescription">A traveling sorcerer once told me that lizardmen came before we did. That before elves and dwarves and men built even the first of their wattle huts, a race of proud lizard kings strode the land. That they lived in palaces of crystal and worshipped their own scaly gods. Maybe that’s true and maybe it ain’t—now they dwell in places men long forgot or abandoned, crafting tools from volcano-glass and lashing against the works of the civilized world. Maybe they just want back what they lost. <em>Instinct</em>: To destroy civilization</p>
 <ul><li>Ambush the unsuspecting</li>
 <li>Launch an amphibious assault</li></ul>
-<h3 class="MonsterName">Medusa	<span class="Tags">Solitary, Devious, Intelligent, Hoarder</span></h3>
+<h3 class="MonsterName">梅杜莎 (Medusa)	<span class="Tags">Solitary, Devious, Intelligent, Hoarder</span></h3>
 <p class="MonsterStats">Claws (d6 damage), 12 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Look turns you to stone</p>
@@ -225,7 +225,7 @@
 <ul><li>Turn a body part to stone with a look</li>
 <li>Draw someone’s gaze</li>
 <li>Show hidden terrible beauty</li></ul>
-<h3 class="MonsterName">Sahuagin	<span class="Tags">Horde, Intelligent</span></h3>
+<h3 class="MonsterName">沙華魚人 (Sahuagin)	<span class="Tags">Horde, Intelligent</span></h3>
 <p class="MonsterStats">Endless teeth (d6+4 damage, 1 piercing), 3 HP, 2 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Forceful, Messy</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Amphibious</p>
@@ -233,7 +233,7 @@
 <ul><li>Bite off a limb</li>
 <li>Hurl a poisoned spear</li>
 <li>Frenzy at the sight of blood</li></ul>
-<h3 class="MonsterName">Sauropod	<span class="Tags">Group, Huge, Cautious</span></h3>
+<h3 class="MonsterName">長頸恐龍 (Sauropod)	<span class="Tags">Group, Huge, Cautious</span></h3>
 <p class="MonsterStats">Trample (d10+5 damage), 18 HP, 4 Armor</p>
 <p class="MonsterStats"><span class="Tags">Reach</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Armor plated body</p>
@@ -241,7 +241,7 @@
 <ul><li>Stampede</li>
 <li>Knock something down</li>
 <li>Unleash a deafening bellow</li></ul>
-<h3 class="MonsterName">Swamp Shambler	<span class="Tags">Solitary, Large, Magical</span></h3>
+<h3 class="MonsterName">沼澤蔓生者 (Swamp Shambler)	<span class="Tags">Solitary, Large, Magical</span></h3>
 <p class="MonsterStats">Lash (d10+1 damage), 23 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Forceful</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Swamp form</p>
@@ -249,14 +249,14 @@
 <ul><li>Call on the swamp itself for aid</li>
 <li>Meld into the swamp</li>
 <li>Reassemble into a new form</li></ul>
-<h3 class="MonsterName">Troll	<span class="Tags">Solitary, Large</span></h3>
+<h3 class="MonsterName">巨魔 (Troll)	<span class="Tags">Solitary, Large</span></h3>
 <p class="MonsterStats">Club (d10+3 damage), 20 HP, 1 Armor</p>
 <p class="MonsterStats"><span class="Tags">Close, Reach, Forceful</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Regeneration</p>
 <p class="MonsterDescription">Tall. Real tall. Eight or nine feet when they’re young or weak. Covered all over in warty, tough skin, too. Big teeth, stringy hair like swamp moss and long, dirty nails. Some are green, some gray, some black. They’re clannish and hateful of each other, not to mention all the rest of us. Near impossible to kill, too, unless you’ve fire or acid to spare—cut a limb off and watch. In a few days, you’ve got two trolls where you once had one. A real serious problem, as you can imagine. <em>Instinct</em>: To smash</p>
 <ul><li>Undo the effects of an attack (unless caused by a weakness, your call)</li>
 <li>Hurl something or someone</li></ul>
-<h3 class="MonsterName">Will-o-wisp	<span class="Tags">Solitary, Tiny, Magical</span></h3>
+<h3 class="MonsterName">鬼火 (Will-o-wisp)	<span class="Tags">Solitary, Tiny, Magical</span></h3>
 <p class="MonsterStats">Ray (w[2d8-2] damage), 12 HP, 0 Armor</p>
 <p class="MonsterStats"><span class="Tags">Near</span></p>
 <p class="MonsterQualities"><strong>Special Qualities:</strong> Body of light</p>
